fix overlapping issue

--- a/client/jetpack-cloud/sections/partner-portal/payment-methods-v2/style.scss
+++ b/client/jetpack-cloud/sections/partner-portal/payment-methods-v2/style.scss
@@ -46,7 +46,6 @@
 			font-size: rem(18px);
 			font-weight: 600;
 			margin-block-end: 8px;
-			text-wrap: nowrap;
 		}
 
 		.payment-method-list-v2-empty-state__card-description {
